fix featured image blur on safari

--- a/themes/10up-block-theme/assets/css/blocks/core/group.css
+++ b/themes/10up-block-theme/assets/css/blocks/core/group.css
@@ -25,4 +25,11 @@
 			}
 		}
 	}
+
+	&.is-style-metadata-row {
+
+		& > :first-child {
+			flex-shrink: 0;
+		}
+	}
 }
