--- a/themes/10up-block-theme/assets/css/blocks/core/post-featured-image.css
+++ b/themes/10up-block-theme/assets/css/blocks/core/post-featured-image.css
@@ -20,6 +20,7 @@
 			background: radial-gradient(50% 50% at 50% 50%, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.6) 100%);
 			filter: blur(150px);
 			mix-blend-mode: lighten;
+			transform: translate3d(0, 0, 0);
 		}
 	}
 }
